# unsplash-mcp-server

./: .gitattributes  Makefile  README.md  prek.toml  pyproject.toml  server.py  test_server.py
.github/workflows/: demo.yml
docs/demo/: README.md  demo.tape  demo_client.py  demo_server.py
docs/demo/fixtures/: photo_meta.json  search_mountain.json
