[project]
name = "unsplash-mcp-server"
version = "0.1.0"
description = "MCP server for searching Unsplash photos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.4",
    "httpx>=0.26.0",
    "piexif>=1.1.3",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "anyio[trio]>=4.0",
    "pytest-anyio>=0.0.0",
]

[project.scripts]
unsplash-mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["/server.py"]

[tool.pytest.ini_options]
testpaths = ["."]
